--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@radix-ui/react-label": "^2.0.2",
